--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "version": "1.0.0",
   "author": "Oakfusion",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
     "@types/react-helmet": "^6.1.1",
+    "@types/react-redux": "^7.1.16",
+    "connected-react-router": "^6.9.1",
     "gatsby": "^3.4.1",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-gatsby-cloud": "^2.4.1",
@@ -18,10 +21,14 @@
     "gatsby-plugin-sharp": "^3.4.1",
     "gatsby-source-filesystem": "^3.4.0",
     "gatsby-transformer-sharp": "^3.4.0",
+    "immer": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
